test/classes/casts/argumentCoerce_Const/error/from-shared-A-nilable-to-unmanaged-A.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from shared A? to unmanaged A
proc bar(const x: unmanaged A) {}
proc foo() {
  var a = new shared A?();
  bar(a);
}
proc main() {
  foo();
}
